Ajout schéma blockquote

--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
 
         </section>
 
+        <img src="img/blockquote.webp" alt="Un super dessin de Nico" class="dessin">
+
         
         <!-- figure -->
         <section class="balise">
